--- a/ShareMemory-back-end/build.gradle
+++ b/ShareMemory-back-end/build.gradle
@@ -1,3 +1,13 @@
+buildscript {
+
+	ext {
+
+		queryDslVersion = "5.0.0"
+
+	}
+
+}
+
 plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.3.8'
@@ -27,13 +37,46 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	compileOnly 'org.projectlombok:lombok'
+
+	testCompileOnly 'org.projectlombok:lombok'
+
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
+
+	testAnnotationProcessor 'org.projectlombok:lombok'
+
+//	implementation 'org.springframework.boot:spring-boot-starter-security'
+//
+//	implementation 'com.google.code.gson:gson:2.10.1'
+//
+//	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+//	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+//	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+
+	implementation "com.querydsl:querydsl-jpa:${queryDslVersion}:jakarta"
+
+	implementation 'org.modelmapper:modelmapper:3.1.0'
+
+	annotationProcessor(
+
+
+			"jakarta.persistence:jakarta.persistence-api",
+
+
+			"jakarta.annotation:jakarta.annotation-api",
+
+
+			"com.querydsl:querydsl-apt:${queryDslVersion}:jakarta")
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+	//file thumbnail
+	implementation 'net.coobird:thumbnailator:0.4.19'
 }
 
 tasks.named('test') {
 	useJUnitPlatform()
 }
+compileJava.dependsOn('clean')
