--- a/ShareMemory-back-end/src/main/resources/application.properties
+++ b/ShareMemory-back-end/src/main/resources/application.properties
@@ -1,1 +1,20 @@
 spring.application.name=ShareMemory-back-end
+
+#mysql
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/sharememorydb?allowPublicKeyRetrieval=true&useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
+spring.datasource.username=root
+spring.datasource.password=whtjdwls1!
+
+
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
+
+
+##file Upload
+#spring.servlet.multipart.max-request-size=30MB
+#spring.servlet.multipart.max-file-size=10MB
+#
+#org.zerock.upload.path=upload
