--- a/ShareMemory-back-end/src/main/resources/application.properties
+++ b/ShareMemory-back-end/src/main/resources/application.properties
@@ -7,14 +7,16 @@ spring.datasource.username=root
 spring.datasource.password=whtjdwls1!
 
 
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 
 
-##file Upload
-#spring.servlet.multipart.max-request-size=30MB
-#spring.servlet.multipart.max-file-size=10MB
-#
-#org.zerock.upload.path=upload
+#file Upload
+spring.servlet.multipart.max-request-size=30MB
+spring.servlet.multipart.max-file-size=10MB
+
+com.chobocho.upload.path=upload
