--- a/ShareMemory-back-end/src/main/resources/application.properties
+++ b/ShareMemory-back-end/src/main/resources/application.properties
@@ -20,3 +20,6 @@ spring.servlet.multipart.max-request-size=30MB
 spring.servlet.multipart.max-file-size=10MB
 
 com.chobocho.upload.path=upload
+
+
+logging.level.org.springframework.security.web=TRACE
