--- a/ShareMemory-back-end/build.gradle
+++ b/ShareMemory-back-end/build.gradle
@@ -46,6 +46,9 @@ dependencies {
 
 	testAnnotationProcessor 'org.projectlombok:lombok'
 
+	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
+	implementation 'com.fasterxml.jackson.core:jackson-databind'
+
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 
 	implementation 'com.google.code.gson:gson:2.10.1'
@@ -53,6 +56,9 @@ dependencies {
 	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
 	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
 	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+
+
+
 
 	implementation "com.querydsl:querydsl-jpa:${queryDslVersion}:jakarta"
 
