--- a/ShareMemory-front-end/sharememory/package.json
+++ b/ShareMemory-front-end/sharememory/package.json
@@ -3,10 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^2.5.1",
     "axios": "^1.7.9",
+    "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.9",
+    "react-cookie": "^7.2.2",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1"
   },
