--- a/ShareMemory-front-end/sharememory/package.json
+++ b/ShareMemory-front-end/sharememory/package.json
@@ -11,6 +11,7 @@
     "react-bootstrap": "^2.10.9",
     "react-cookie": "^7.2.2",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1"
